--- a/_base-base.scss
+++ b/_base-base.scss
@@ -165,4 +165,82 @@
               }
               @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
             }
+
+            ///////////////////////////////////////////
+            //
+            //  Museo Sans Rounded
+            //
+            ///////////////////////////////////////////
+            @if $font-family == "museo-sans-rounded" { 
+              $shift:0;
+              @if $font-size == 12px {$shift:.70;}
+              @else if $font-size == 14px {$shift:.70;}
+              @else if $font-size == 16px {$shift:.65;}
+              @else if $font-size == 18px {$shift:.60;}
+              @else if $font-size == 20px {$shift:.50;}
+              @else if $font-size == 22px {$shift:.50;}
+              @else if $font-size == 24px {$shift:.40;}
+              @else if $font-size == 26px {$shift:.90;}
+              @else if $font-size == 28px {$shift:.85;}
+              @else if $font-size == 30px {$shift:.80;}
+              @else if $font-size == 32px {$shift:.70;}
+              @else if $font-size == 34px {$shift:.70;}
+              @else if $font-size == 36px {$shift:.60;}
+              @else if $font-size == 38px {$shift:.60;}
+              @else if $font-size == 40px {$shift:.00;}
+              @else if $font-size == 42px {$shift:.00;}
+              // @else if $font-size == 44px {$shift:0;}
+              // @else if $font-size == 46px {$shift:0;}
+              // @else if $font-size == 48px {$shift:0;}
+              // @else if $font-size == 50px {$shift:0;}
+              // @else if $font-size == 52px {$shift:0;}
+              // @else if $font-size == 54px {$shift:0;}
+              // @else if $font-size == 56px {$shift:0;}
+              // @else if $font-size == 58px {$shift:0;}
+              // @else if $font-size == 60px {$shift:0;}
+              
+              @else{
+                $font-size:$base-font-size;
+              }
+              @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+            }
+
+            ///////////////////////////////////////////
+            //
+            //  Open Sans
+            //
+            ///////////////////////////////////////////
+            @if $font-family == "Open Sans" { 
+              $shift:0;
+              @if $font-size == 12px {$shift:.70}
+              @else if $font-size == 14px {$shift:.60;}
+              @else if $font-size == 16px {$shift:.55;}
+              @else if $font-size == 18px {$shift:.50;}
+              @else if $font-size == 20px {$shift:.50;}
+              @else if $font-size == 22px {$shift:.35;}
+              @else if $font-size == 24px {$shift:.35;}
+              @else if $font-size == 26px {$shift:.80;}
+              @else if $font-size == 28px {$shift:.70;}
+              @else if $font-size == 30px {$shift:.70;}
+              @else if $font-size == 32px {$shift:.65;}
+              @else if $font-size == 34px {$shift:.60;}
+              @else if $font-size == 36px {$shift:.55;}
+              @else if $font-size == 38px {$shift:.40;}
+              @else if $font-size == 40px {$shift:.90;}
+              @else if $font-size == 42px {$shift:.85;}
+              // @else if $font-size == 44px {$shift:0;}
+              // @else if $font-size == 46px {$shift:0;}
+              // @else if $font-size == 48px {$shift:0;}
+              // @else if $font-size == 50px {$shift:0;}
+              // @else if $font-size == 52px {$shift:0;}
+              // @else if $font-size == 54px {$shift:0;}
+              // @else if $font-size == 56px {$shift:0;}
+              // @else if $font-size == 58px {$shift:0;}
+              // @else if $font-size == 60px {$shift:0;}
+              
+              @else{
+                $font-size:$base-font-size;
+              }
+              @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+            }
 }
