--- a/_base-base.scss
+++ b/_base-base.scss
@@ -285,6 +285,11 @@
               @else if $font-size == 36px {$shift:.53;}
               @else if $font-size == 38px {$shift:.51;}
               @else if $font-size == 40px {$shift:.48;}
+              @else if $font-size == 42px {$shift:.43;}
+              @else if $font-size == 44px {$shift:.41;}
+              @else if $font-size == 46px {$shift:.40;}
+              @else if $font-size == 48px {$shift:.40;}
+              @else if $font-size == 50px {$shift:.85;}
               @else{
                 $font-size:$base-font-size;
               }
