--- a/_base-base.scss
+++ b/_base-base.scss
@@ -30,6 +30,9 @@
   } @else {
     @include rhythm($shift, 0, $spacing -  $shift, 0, $to-size);
   }
+    } @else {
+      @include rhythm($shift, 0, $spacing -  $shift, 0, $to-size);
+    }
 }
 
 /*-- Some extenable font sizes. --*/
@@ -48,38 +51,39 @@
     //  with a base-line-height of 26px
     //
     ///////////////////////////////////////////
-    @if $font-family == "Proxima Nova" or $font-family == "proxima-nova" {
-      $shift:0;
-      @if $font-size == 11px {$shift:.37;}
-      @else if $font-size == 12px {$shift:.34;}
-      @else if $font-size == 13px {$shift:.34;}
-      @else if $font-size == 14px {$shift:.32;}
-      @else if $font-size == 16px {$shift:.32;}
-      @else if $font-size == 18px {$shift:.28;}
-      @else if $font-size == 20px {$shift:.28;}
-      @else if $font-size == 22px {$shift:.25;}
-      @else if $font-size == 24px {$shift:.70;}
-      @else if $font-size == 26px {$shift:.67;}
-      @else if $font-size == 28px {$shift:.62;}
-      @else if $font-size == 30px {
-        @if $lines == 1 {$shift:.12;}
-        @else {$shift: .62;}
-      }
-      @else if $font-size == 32px {$shift:.58;}
-      @else if $font-size == 34px {$shift:.58;}
-      @else if $font-size == 36px {$shift:.55;}
-      @else if $font-size == 38px {$shift:.50;}
-      @else if $font-size == 40px {$shift:.48;}
-      @else if $font-size == 48px {$shift:.43;}
-      @else if $font-size == 60px {
-        @if $lines == 2{$shift:.20;}
-        @else {$shift:.70;}
-      }
-      @else{
-        $font-size:$base-font-size;
-      }
-      @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
-    } 
+  @if $font-family == "Proxima Nova" or $font-family == "proxima-nova" {
+    $shift:0;
+    @if $font-size == 11px {$shift:.37;}
+    @else if $font-size == 12px {$shift:.34;}
+    @else if $font-size == 13px {$shift:.34;}
+    @else if $font-size == 14px {$shift:.32;}
+    @else if $font-size == 16px {$shift:.32;}
+    @else if $font-size == 18px {$shift:.28;}
+    @else if $font-size == 20px {$shift:.28;}
+    @else if $font-size == 22px {$shift:.25;}
+    @else if $font-size == 24px {$shift:.70;}
+    @else if $font-size == 26px {$shift:.67;}
+    @else if $font-size == 28px {$shift:.62;}
+    @else if $font-size == 30px {
+      @if $lines == 1 {$shift:.12;}
+      @else {$shift: .62;}
+    }
+    @else if $font-size == 32px {$shift:.58;}
+    @else if $font-size == 34px {$shift:.58;}
+    @else if $font-size == 36px {$shift:.55;}
+    @else if $font-size == 38px {$shift:.50;}
+    @else if $font-size == 40px {$shift:.48;}
+    @else if $font-size == 48px {$shift:.43;}
+    @else if $font-size == 56px {$shift:.30;}
+    @else if $font-size == 60px {
+      @if $lines == 2{$shift:.20;}
+      @else {$shift:.70;}
+    }
+    @else{
+      $font-size:$base-font-size;
+    }
+    @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+  } 
 
 
   ///////////////////////////////////////////
