proxima-nova 72px
Signed-off-by: Jason Carney <jason@dashmedia.com.au>

--- a/_base-base.scss
+++ b/_base-base.scss
@@ -118,7 +118,8 @@
     @else if $font-size == 56px {$shift:.20;}
     @else if $font-size == 58px {$shift:.15;}
     @else if $font-size == 60px {$shift:.05;}
-    
+    @else if $font-size == 72px {$shift:.35;}
+
     @else{
       $font-size:$base-font-size;
     }
