--- a/_base-base.scss
+++ b/_base-base.scss
@@ -373,4 +373,64 @@
     }
     @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
   }
+
+  ///////////////////////////////////////////
+  //
+  //   Oswald
+  //
+  ///////////////////////////////////////////
+  @if $font-family == "Oswald" { 
+    $shift:0;
+    @if $font-size == 12px {$shift:.65;}
+    @else if $font-size == 14px {$shift:.55;}
+    @else if $font-size == 16px {$shift:.5;}
+    @else if $font-size == 18px {$shift:.45;}
+    @else if $font-size == 20px {$shift:.35;}
+    @else if $font-size == 22px {$shift:.3;}
+    @else if $font-size == 24px {$shift:.25;}
+    @else if $font-size == 26px {$shift:.70;}
+    @else if $font-size == 28px {$shift:.65;}
+    @else if $font-size == 30px {$shift:.55;}
+    @else if $font-size == 32px {$shift:.5;}
+    @else if $font-size == 34px {$shift:.45;}
+    @else if $font-size == 36px {$shift:.35;}
+    @else if $font-size == 38px {$shift:.3;}
+    @else if $font-size == 40px {$shift:.70;}
+    @else if $font-size == 42px {$shift:.65;}
+    @else if $font-size == 62px {$shift:.5;}
+    @else{
+      $font-size:$base-font-size;
+    }
+    @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+  }
+
+  ///////////////////////////////////////////
+  //
+  //   Adelle
+  //
+  ///////////////////////////////////////////
+  @if $font-family == "adelle" { 
+    $shift:0;
+    @if $font-size == 12px {$shift:.7;}
+    @else if $font-size == 14px {$shift:.65;}
+    @else if $font-size == 16px {$shift:.65;}
+    @else if $font-size == 18px {$shift:.55;}
+    @else if $font-size == 20px {$shift:.50;}
+    @else if $font-size == 22px {$shift:.50;}
+    @else if $font-size == 24px {$shift:.45;}
+    @else if $font-size == 26px {$shift:.85;}
+    @else if $font-size == 28px {$shift:.85;}
+    @else if $font-size == 30px {$shift:.75;}
+    @else if $font-size == 32px {$shift:.70;}
+    @else if $font-size == 34px {$shift:.70;}
+    @else if $font-size == 36px {$shift:.60;}
+    @else if $font-size == 38px {$shift:.60;}
+    @else if $font-size == 40px {$shift:0;}
+    @else if $font-size == 42px {$shift:.90;}
+    @else if $font-size == 72px {$shift:.3;}
+    @else{
+      $font-size:$base-font-size;
+    }
+    @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+  }
 }
