Open Sans and Lato

--- a/_base-base.scss
+++ b/_base-base.scss
@@ -433,4 +433,59 @@
     }
     @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
   }
+  ///////////////////////////////////////////
+  //
+  //   Open Sans
+  //
+  ///////////////////////////////////////////
+  @if $font-family == "Open Sans" { 
+    $shift:0;
+    @if $font-size == 12px {$shift:.7;}
+    @else if $font-size == 14px {$shift:.65;}
+    @else if $font-size == 16px {$shift:.60;}
+    @else if $font-size == 18px {$shift:.50;}
+    @else if $font-size == 20px {$shift:.50;}
+    @else if $font-size == 22px {$shift:.35;}
+    @else if $font-size == 24px {$shift:.35;}
+    @else if $font-size == 26px {$shift:.80;}
+    @else if $font-size == 28px {$shift:.70;}
+    @else if $font-size == 30px {$shift:.70;}
+    @else if $font-size == 32px {$shift:.65;}
+    @else if $font-size == 34px {$shift:.60;}
+    @else if $font-size == 36px {$shift:.55;}
+    @else if $font-size == 38px {$shift:.40;}
+    @else if $font-size == 40px {$shift:.90;}
+    @else if $font-size == 42px {$shift:.85;}
+    @else{
+      $font-size:$base-font-size;
+    }
+    @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+  }
+  @if $font-family == "Lato" { 
+    $shift:0;
+    @if $font-size == 12px {$shift:.7;}
+    @else if $font-size == 14px {$shift:.65;}
+    @else if $font-size == 16px {$shift:.60;}
+    @else if $font-size == 18px {$shift:.50;}
+    @else if $font-size == 20px {$shift:.45;}
+    @else if $font-size == 22px {$shift:.45;}
+    @else if $font-size == 24px {$shift:.35;}
+    @else if $font-size == 26px {$shift:.80;}
+    @else if $font-size == 28px {$shift:.70;}
+    @else if $font-size == 30px {$shift:.65;}
+    @else if $font-size == 32px {$shift:.65;}
+    @else if $font-size == 34px {$shift:.55;}
+    @else if $font-size == 36px {$shift:.50;}
+    @else if $font-size == 38px {$shift:.45;}
+    @else if $font-size == 40px {$shift:.95;}
+    @else if $font-size == 42px {$shift:.85;}
+    @else if $font-size == 44px {$shift:.80;}
+    @else if $font-size == 46px {$shift:.80;}
+    @else if $font-size == 48px {$shift:.70;}
+    @else if $font-size == 50px {$shift:.65;}
+    @else{
+      $font-size:$base-font-size;
+    }
+    @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+  }
 }
