--- a/_base-base.scss
+++ b/_base-base.scss
@@ -498,4 +498,34 @@
     }
     @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
   }
+  
+  ///////////////////////////////////////////
+   //
+   //   adobe-caslon-pro
+   //
+   ///////////////////////////////////////////
+   @if $font-family == "adobe-caslon-pro" { 
+     $shift:0;
+     @if $font-size == 12px {$shift:.83;}
+     @else if $font-size == 14px {$shift:.85;}
+     @else if $font-size == 16px {$shift:.85;}
+     @else if $font-size == 18px {$shift:.85;}
+     @else if $font-size == 20px {$shift:.80;}
+     @else if $font-size == 22px {$shift:.80;}
+     @else if $font-size == 24px {$shift:.80;}
+     @else if $font-size == 26px {$shift:.20;}
+     @else if $font-size == 28px {$shift:.20;}
+     @else if $font-size == 30px {$shift:.20;}
+     @else if $font-size == 32px {$shift:.15;}
+     @else if $font-size == 34px {$shift:.15;}
+     @else if $font-size == 36px {$shift:.15;}
+     @else if $font-size == 38px {$shift:.15;}
+     @else if $font-size == 40px {$shift:.60;}
+     @else if $font-size == 42px {$shift:.60;}
+     @else{
+       $font-size:$base-font-size;
+     }
+     @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+   }
+
 }
