--- a/_base-base.scss
+++ b/_base-base.scss
@@ -528,4 +528,33 @@
      @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
    }
 
+   ///////////////////////////////////////////
+    //
+    //   arial
+    //
+    ///////////////////////////////////////////
+    @if $font-family == "arial" { 
+      $shift:0;
+      @if $font-size == 12px {$shift:.7;}
+      @else if $font-size == 14px {$shift:.65;}
+      @else if $font-size == 16px {$shift:.65;}
+      @else if $font-size == 18px {$shift:.60;}
+      @else if $font-size == 20px {$shift:.50;}
+      @else if $font-size == 22px {$shift:.50;}
+      @else if $font-size == 24px {$shift:.40;}
+      @else if $font-size == 26px {$shift:.85;}
+      @else if $font-size == 28px {$shift:.85;}
+      @else if $font-size == 30px {$shift:.80;}
+      @else if $font-size == 32px {$shift:.70;}
+      @else if $font-size == 34px {$shift:.65;}
+      @else if $font-size == 36px {$shift:.65;}
+      @else if $font-size == 38px {$shift:.60;}
+      @else if $font-size == 40px {$shift:0;}
+      @else if $font-size == 42px {$shift:0;}
+      @else{
+        $font-size:$base-font-size;
+      }
+      @include vertical-groove($shift, $spacing, $font-size, $base-font-size, $lines);
+    }
+
 }
