--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -300,5 +300,24 @@ $base-base-fonts: (
     38px:('d':.60),
     40px:('d':0),
     42px:('d':0)
+    ),
+  'lft-erica':(
+    12px:('d':.7),
+    14px:('d':.7),
+    16px:('d':.65),
+    18px:('d':.6),
+    20px:('d':.6),
+    22px:('d':.5),
+    24px:('d':.4),
+    26px:('d':.9),
+    28px:('d':.85),
+    30px:('d':.8),
+    32px:('d':.8),
+    34px:('d':.7),
+    36px:('d':.7),
+    38px:('d':.65),
+    40px:('d':.1),
+    42px:('d':.05),
+    48px:('d':.95)
     )
   );
