typo on font name
Signed-off-by: Jason Carney <jason@dashmedia.com.au>

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -301,7 +301,7 @@ $base-base-fonts: (
     40px:('d':0),
     42px:('d':0)
     ),
-  'lft-erica':(
+  'lft-etica':(
     12px:('d':.7),
     14px:('d':.7),
     16px:('d':.65),
