--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -319,5 +319,25 @@ $base-base-fonts: (
     40px:('d':.0),
     42px:('d':.0),
     48px:('d':.85)
+    ),
+  'Ubuntu': (
+    11px:('d':.32),
+    12px:('d':.7),
+    13px:('d':.29),
+    14px:('d':.6),
+    16px:('d':.55),
+    18px:('d':.47), 
+    20px:('d':.47),
+    22px:('d':.40),
+    24px:('d':.40),
+    26px:('d':.85),
+    28px:('d':.75),
+    30px:('d':.70),
+    32px:('d':.65),
+    34px:('d':.55),
+    36px:('d':.50),
+    38px:('d':.45),
+    40px:('d':.90),
+    42px:('d':.90)
     )
   );
