proxima-nova 24px update
Signed-off-by: Jason Carney <jason@dashmedia.com.au>

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -40,7 +40,7 @@ $base-base-fonts: (
     18px:('d':.60),
     20px:('d':.60),
     22px:('d':.52),
-    24px:('d':.45),
+    24px:('d':.45, 3:0),
     26px:('d':.85),
     28px:('d':.80),
     30px:('d':.80),
