adobe-garamond-pro
Signed-off-by: Jason Carney <jason@dashmedia.com.au>

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -340,5 +340,25 @@ $base-base-fonts: (
     38px:('d':.45),
     40px:('d':.90),
     42px:('d':.90)
+    ),
+  'adobe-garamond-pro': (
+    11px:('d':.8),
+    12px:('d':.8),
+    14px:('d':.7),
+    16px:('d':.7),
+    18px:('d':.65), 
+    20px:('d':.65),
+    22px:('d':.55),
+    24px:('d':.50),
+    26px:('d':0),
+    28px:('d':.90),
+    30px:('d':.90),
+    32px:('d':.85),
+    34px:('d':.85),
+    36px:('d':.80),
+    38px:('d':.70),
+    40px:('d':.20),
+    42px:('d':.15),
+    52px:('d':.90)
     )
   );
