added some courier
Signed-off-by: Jonathan Haslett <jon@dashmedia.com.au>

--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -100,14 +100,15 @@ $base-base-fonts: (
     22px:('d':.50),
     24px:('d':.40),
     26px:('d':.90),
-    28px:('d':.85),
+    28px:('d':.80),
     30px:('d':.80),
     32px:('d':.70),
     34px:('d':.70),
     36px:('d':.60),
     38px:('d':.60),
     40px:('d':.00),
-    42px:('d':.00)
+    42px:('d':.00),
+    72px:('d':.20)
     ),
   'Open Sans':(
     12px:('d':.70),
@@ -360,5 +361,9 @@ $base-base-fonts: (
     40px:('d':.20),
     42px:('d':.15),
     52px:('d':.90)
-    )
+    ),
+  'Courier': (
+      12px:('d':.65),
+      14px:('d':.55)
+      )
   );
