--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -303,7 +303,7 @@ $base-base-fonts: (
     40px:('d':0),
     42px:('d':0)
     ),
-  'lft-etica':(
+  'lft-erica':(
     12px:('d':.7),
     14px:('d':.65),
     16px:('d':.65),
@@ -320,7 +320,8 @@ $base-base-fonts: (
     38px:('d':.60),
     40px:('d':.0),
     42px:('d':.0),
-    48px:('d':.85)
+    48px:('d':.85),
+    56px:('d':.1)
     ),
   'Ubuntu': (
     11px:('d':.32),
