--- a/_font-settings.scss
+++ b/_font-settings.scss
@@ -303,7 +303,7 @@ $base-base-fonts: (
     40px:('d':0),
     42px:('d':0)
     ),
-  'lft-erica':(
+  'lft-etica':(
     12px:('d':.7),
     14px:('d':.65),
     16px:('d':.65),
